Hoist the isBootstrapClass() method to BTraceRuntime
This allows easier module boundaries patching as only the agent unnamed module needs to be considered.